--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .card {
-  background: white;
-  padding: 30px;
+  background   : white;
+  padding      : 30px;
   margin-bottom: 20px;
   border-radius: 4px;
-  box-shadow: 0px 2px 3px 0px
+  box-shadow   : 0px 2px 3px 0px
    rgba(0, 0, 0, 0.2);
     /*border: 1px dashed;
     border-color: #F5AC72;*/
@@ -15,7 +15,7 @@
 
 .navbar-inverse {
   background-color: #271F30;
-  border: none;
+  border          : none;
 }
 /*.card:hover {
   background-color: lightgrey;
@@ -26,34 +26,34 @@
 }
 
 .list-inline {
-  font-size: 25px;
+  font-size : 25px;
   text-align: center;
 }
 
 body {
   background-color: #ECEBE4;
-  padding-top: 70px;
+  padding-top     : 70px;
 }
 
 .container {
-  width: 700px;   /* Set width */
+  width : 700px;   /* Set width */
   margin: 0 auto; /* Automatically set left/right margins */
 }
 
 .img-rectangle {
-  height: 250px;
-  width: 190px;
+  height       : 250px;
+  width        : 190px;
   border-radius: 10%;
 }
 
 .img-circle {
   border-radius: 10%;
-  position: center;
+  position     : center;
 }
 
 #picture {
   border-radius: 50%;
-  position: center;
+  position     : center;
 }
 
 h1, h2, h3 {
@@ -66,7 +66,7 @@ h2 {
 }
 
 h1 {
-  color: #EC971F;
+  color    : #EC971F;
   font-size: 30px;
 }
 
@@ -93,8 +93,7 @@ td {
 }*/
 .description {
   max-height: 220px;
-/*  overflow: scroll;
-*/  text-align: justify;
+  text-align: justify;
 }
 
 .navbar-right a {
@@ -115,5 +114,5 @@ td {
 
 #rottent {
   height: 20px;
-  width: 22px;
+  width : 22px;
 }
